[package]
name = "transactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.20"
rust_decimal_macros = "1.20"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
num_cpus = "1.13.1"
indoc = "1.0"
